<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navMyPost"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_my_posts" />
    <item
        android:id="@+id/navOrders"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu_my_order" />

    <item
        android:id="@+id/navAdd"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/menu_add_product" />

<!--    <item-->
<!--        android:id="@+id/navForum"  &lt;!&ndash; Only in seller menu &ndash;&gt;-->
<!--    android:icon="@drawable/ic_forum"-->
<!--    android:title="@string/farmer_forum" />-->

    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/user"
        android:title="@string/menu_profile" />
</menu>